Updated mason, fixed Double2D infinite loop