@@ -63,7 +63,7 @@ public class Students extends SimState
                 studentB = students.get(random.nextInt(students.numObjs));
                 } while (student == studentB);
             double buddiness = random.nextDouble();
-            buddies.addEdge(student, studentB, new Double(buddiness));
+            buddies.addEdge(student, studentB, Double.valueOf(buddiness));
 
             // who does he dislike?
             do
@@ -71,7 +71,7 @@ public class Students extends SimState
                 studentB = students.get(random.nextInt(students.numObjs));
                 } while (student == studentB);
             buddiness = random.nextDouble();
-            buddies.addEdge(student, studentB, new Double( -buddiness));
+            buddies.addEdge(student, studentB, Double.valueOf( -buddiness));
             }
         }
         
